--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,6 @@
-Middel
+<h2>Recently Added</h2>
+<div>
+    <% books.forEach(book => { %>
+        <img width="100" height="150" src="<%= book.coverImagePath %>">
+    <% }) %>
+</div>
