Finished Author Routes

--- a/views/authors/_form_fields.ejs
+++ b/views/authors/_form_fields.ejs
@@ -1,2 +1,2 @@
 <label>Name</label>
-<input type="" name="name" value="<% if (typeof author !== 'undefined') { %><%= author.name %><%}%>">
+<input type="text" name="name" value="<% if (typeof author !== 'undefined') { %><%= author.name %><%}%>">
