--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -1,6 +1,6 @@
 <div>
     <label>Title</label>
-    <input type="text" name="title" value="<% if (typeof title !== 'undefined') { %><%= book.title %><%}%>">
+    <input type="text" name="title" value="<%= book.title %>">
 </div>
 <div>
     <label>Author</label>
