--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -16,6 +16,8 @@
 </form>
 <div>
     <% books.forEach(book => { %>
-        <img width="100" height="150" src="<%= book.coverImagePath %>">
+        <a href="/books/<%= book.id %>">
+            <img height="150" width="100" src="<%= book.coverImagePath %>">
+        </a>
     <% }) %>
 </div>
