--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <header>
-    <nav>
-        <a href="/">My Brary</a>
+    <nav class="header-nav">
+        <a class="header-title" href="/">My Brary</a>
         <ul>
             <li><a href="/authors">Authors</a></li>
             <li><a href="/authors/new">Add Authors</a></li>
