--- a/views/partials/errorMessage.ejs
+++ b/views/partials/errorMessage.ejs
@@ -1,3 +1,3 @@
 <% if (locals.errorMessage != null && errorMessage !== 'undefined') { %>
-    <%= errorMessage %>
+   <div class="error-message"><%= errorMessage %></div> 
 <% } %>
